apps/hermes-agent-postgres/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes-agent-postgres
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  selector:
    app.kubernetes.io/name: hermes-agent-postgres
